# stargaze2

./: Cargo.toml  README.md  build.rs  d.md
.github/workflows/: release.yml  rust.yml
src/: error.rs  main.rs  prelude.rs
src/utils/: cli.rs  env.rs  mod.rs  weather_types.rs
src/utils/user_prefs/: mod.rs
wix/: main.wxs
